--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-hello World
-this is my first homepage.
-haha
+Content-type: text/html
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>code arsenal</title>
+ </head>
+<body>
+Hello, this is my homepage!
+<p>
+Be more soon...
+<p>
+Maybe late 2017??
+<p>
+Cheers
+</body>
+</html>
