--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-Content-type: text/html
+ Content-Type: text/html;charset=utf-8
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <title>code arsenal</title>
+<style type="text/css">
+.text {
+    font-family: Comic Sans MS;
+}
+</style>
  </head>
-<body>
+<body class="text">
 Hello, this is my homepage!
 <p>
 Be more soon...
