--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-Content-Type: text/html;charset=utf-8
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <title>code arsenal</title>
 <style type="text/css">
 .text {
-    font-family: Comic Sans MS;
+    font-family:PT Sans;
 }
 </style>
  </head>
