--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
 <title>code arsenal</title>
 <style type="text/css">
@@ -16,5 +16,7 @@ Be more soon...
 Maybe late 2017??
 <p>
 Cheers
+<p>
+你好，朋友！
 </body>
 </html>
