--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@ Maybe late 2017??
 Cheers
 <p>
 你好，朋友！
+<p>
+My photography: Photo in Busselton, WA Australia
+</p>
+<img src="pics/IMG_0102.JPG" alt="Beach1">
+<img src="pics/IMG_0238.JPG" alt="Beach2">
+<img src="pics/IMG_0239.JPG" alt="Beach3">
 </body>
 </html>
