--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ Cheers
 <p>
 My photography: Photo in Busselton, WA Australia
 </p>
-<img src="pics/IMG_0102.JPG" alt="Beach1">
-<img src="pics/IMG_0238.JPG" alt="Beach2">
-<img src="pics/IMG_0239.JPG" alt="Beach3">
+<img src="pics/IMG_0102.JPG" alt="Beach1" style="width:128px;height:128px;">
+<img src="pics/IMG_0238.JPG" alt="Beach2" style="width:128px;height:128px;">
+<img src="pics/IMG_0239.JPG" alt="Beach3" style="width:128px;height:128px;">
 </body>
 </html>
