--- a/index.html
+++ b/index.html
@@ -6,23 +6,31 @@
 .text {
     font-family:PT Sans;
 }
+.rotateimg90 {
+  -webkit-transform:rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
 </style>
  </head>
 <body class="text">
 Hello, this is my homepage!
 <p>
 Be more soon...
-<p>
+<br>
 Maybe late 2017??
-<p>
+<br>
 Cheers
-<p>
+<br>
 你好，朋友！
+</p>
 <p>
 My photography: Photo in Busselton, WA Australia
 </p>
-<img src="pics/IMG_0102.JPG" alt="Beach1" style="width:128px;height:128px;">
-<img src="pics/IMG_0238.JPG" alt="Beach2" style="width:128px;height:128px;">
-<img src="pics/IMG_0239.JPG" alt="Beach3" style="width:128px;height:128px;">
+<img src="pics/IMG_0102.JPG" alt="Beach1" style="width:300px;height:300px;"><br>
+<img src="pics/IMG_0238.JPG" alt="Beach2" style="width:300px;height:300px;"><br>
+<img src="pics/IMG_0239.JPG" alt="Beach3" style="width:300px;height:300px;" class="rotateimg90"><br>
 </body>
 </html>
