--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 <body class="text">
 Hello, this is my homepage!
 <p>
-Be more soon...
+Add more soon...<b>Maybe</b> late 2017??
 <br>
-Maybe late 2017??
+Cheers...Toby
 <br>
-Cheers
-<br>
-你好，朋友！
+</p>
+<p>
+你好，朋友！敬请期待2017年末上线 d(`･∀･)b
 </p>
 <p>
 My photography: Photo in Busselton, WA Australia
+<br><br>
+<img src="pics/IMG_0102.JPG" alt="Beach1" style="width:500px;height:300px;"><br>
+<img src="pics/IMG_0238.JPG" alt="Beach2" style="width:500px;height:300px;"><br>
 </p>
-<img src="pics/IMG_0102.JPG" alt="Beach1" style="width:300px;height:300px;"><br>
-<img src="pics/IMG_0238.JPG" alt="Beach2" style="width:300px;height:300px;"><br>
-<img src="pics/IMG_0239.JPG" alt="Beach3" style="width:300px;height:300px;" class="rotateimg90"><br>
 </body>
 </html>
