--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 .text {
     font-family:PT Sans;
 }
+.backgrColor {
+    background-color: powderblue;  
+}
 .rotateimg90 {
   -webkit-transform:rotate(90deg);
   -moz-transform: rotate(90deg);
