--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   transform: rotate(90deg);
 }
 </style>
- </head>
-<body class="text" class="backgrColor">
+</head>
+<div class="backgrColor">
+<body class="text">
 Hello, this is my homepage!
 <p>
 Add more soon...<b>Maybe</b> late 2017??
@@ -36,4 +37,5 @@ My photography: Photo in Busselton, WA Australia
 <img src="pics/IMG_0238.JPG" alt="Beach2" style="width:500px;height:300px;"><br>
 </p>
 </body>
+</div>
 </html>
