--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 .text {
     font-family:PT Sans;
 }
-.backgrColor {
+body {
     background-color: powderblue;  
 }
 .rotateimg90 {
@@ -18,7 +18,6 @@
 }
 </style>
 </head>
-<div class="backgrColor">
 <body class="text">
 Hello, this is my homepage!
 <p>
@@ -37,5 +36,4 @@ My photography: Photo in Busselton, WA Australia
 <img src="pics/IMG_0238.JPG" alt="Beach2" style="width:500px;height:300px;"><br>
 </p>
 </body>
-</div>
 </html>
