--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     font-family:PT Sans;
 }
 body {
-    background-color: powderblue;  
+    background-color: whitesmoke;  
 }
 .rotateimg90 {
   -webkit-transform:rotate(90deg);
