--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ My photography: Photo in Busselton, WA Australia
 <br><br>
 <img src="pics/IMG_0102.JPG" alt="Beach1" style="width:500px;height:300px;"><br>
 <img src="pics/IMG_0238.JPG" alt="Beach2" style="width:500px;height:300px;"><br>
-<img class="rotateimg90" src="pics/IMG_0239.JPG" alt="Beach3" style="width:500px;height:300px;"><br>
+<img class="rotateimg90" src="pics/IMG_0239.JPG" alt="Beach3"><br>
 </p>
 </body>
 </html>
