--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 </style>
 </head>
-<body class="text">
+<body class="text" style="text-align:center">
 Hello, this is my homepage!
 <p>
 Add more soon...<b>Maybe</b> late 2017??
