--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ body {
 }
 </style>
 </head>
-<body class="text" style="text-align:center">
+<body>
+<div class="text" style="text-align:center">
 Hello, this is my homepage!
 <p>
 Add more soon...<b>Maybe</b> late 2017??
@@ -31,10 +32,12 @@ Cheers...Toby
 </p>
 <p>
 My photography: Photo in Busselton, WA Australia
-<br><br>
+<br><br></div>
+<center>
 <img src="pics/IMG_0102.JPG" alt="Beach1" style="width:500px;height:300px;"><br>
 <img src="pics/IMG_0238.JPG" alt="Beach2" style="width:500px;height:300px;"><br>
 <img class="rotateimg90" src="pics/IMG_0239.JPG" alt="Beach3" style="width:340px;height:500px;"><br>
+</center>
 </p>
 </body>
 </html>
