--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Cheers...Toby
 </p>
 <p>
 My photography: Photo in Busselton, WA Australia
-<br><br></div>
+<br></div>
 <center>
 <img src="pics/IMG_0102.JPG" alt="Beach1" style="width:500px;height:300px;"><br>
 <img src="pics/IMG_0238.JPG" alt="Beach2" style="width:500px;height:300px;"><br>
