--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Cheers...Toby
 你好，朋友！敬请期待2017年末上线 d(`･∀･)b
 </p>
 <p>
-My photography: Photo in Busselton, WA Australia
+Beaches in Busselton, WA Australia
 <br></div>
 <center>
 <img src="pics/IMG_0102.JPG" alt="Beach1" style="width:500px;height:300px;"><br>
