--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 .text {
     font-family:PT Sans;
 }
-body {
-    background="pic/back.jpg";    
-}
 .rotateimg90 {
   -webkit-transform:rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -18,7 +15,7 @@ body {
 }
 </style>
 </head>
-<body>
+<body background="pics/back.jpg">
 <div class="text" style="text-align:center">
 Hello, this is my homepage!
 <p>
