--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 }
 </style>
 </head>
-<body background="pics/back.jpg">
+<body background-color="pics/back.jpg">
 <div class="text" style="text-align:center">
 Hello, this is my homepage!
 <p>
