--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 .text {
     font-family:PT Sans;
 }
+body {
+   background-color: #F5F5F5 
+}
 .rotateimg90 {
   -webkit-transform:rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -15,7 +18,7 @@
 }
 </style>
 </head>
-<body background-color="pics/back.jpg">
+<body>
 <div class="text" style="text-align:center">
 Hello, this is my homepage!
 <p>
