--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+<meta charset="UTF-8">
 <title>code arsenal</title>
+<link ref="stylesheet" href="animate.css">
+<script src="jquery.js"></script>
+<script src="jquery.lettering.js></script>
+<script src="jquery.textillate.js></script>
 <style type="text/css">
 .text {
     font-family:PT Sans;
-}
+j
 body {
    background-color: #F5F5F5 
 }
@@ -22,6 +27,14 @@ body {
 </style>
 </head>
 <body>
+<h1 class="tlt">QualityLessons.Net - with Mohit</h1>
+<script>
+$('.tlt').textillate({
+int:{effect:'rollIn', delay:10},
+out: {effect:'bounce'},
+loop:true
+});
+</script>
 <table border="0" align="center" width="90%">
 <tr>
     <td style="vertical-align:top"><div class="text" style="text-align:center">
