--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 .text,h1 {
     font-family:PT Sans;
     font-weight: bold;
+    margin-right: 50px;
 }
 body {
    background-color: #F5F5F5
@@ -30,11 +31,11 @@ table {
 <body>
 <h1 class="text">
 <b>tobbyzheng@github</b></h1>
-<table border="0" align="left" width="70%">
+<table border="0" align="center" width="90%">
 <tr>
     <td style="vertical-align:top">
-        <div class="text" style="text-align:left">
-            <p class="tlt">Hello, this is my homepage! Add more soon...Maybe late 2017?? Cheers...Toby 你好，朋友！敬请期待2017年末上线 d(`･∀･)b</p>
+        <div class="text" style="text-align:center">
+            <p class="tlt">Hello, this is my homepage!</p>
             <script>
             $('.tlt').textillate({
             in: { effect:'fadeInLeftBig', delay:14, shuffle: true},
@@ -42,6 +43,7 @@ table {
             loop:true
             });
             </script>
+            <p>你好，朋友！敬请期待2017年末上线 d(`･∀･)b</p>
         </div>
     </td>
     <td style="vertical-align:top">
