--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     font-weight: bold;
     margin-right: 50px;
 }
+.italian {
+    font-style: italic;
+}
 body {
    background-color: #F5F5F5
 }
@@ -27,6 +30,23 @@ table {
   transform: rotate(90deg);
 }
 </style>
+<link rel="apple-touch-icon" sizes="57x57" href="icons.ico.ico/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="icons.ico/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="icons.ico/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="icons.ico/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="icons.ico/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icons.ico/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="icons.ico/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icons.ico/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="icons.ico/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="icons.ico/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons.ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="icons.ico/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons.ico/favicon-16x16.png">
+<link rel="manifest" href="icons.ico/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="icons.ico/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <h1 class="text">
@@ -36,6 +56,9 @@ table {
     <td style="vertical-align:top">
         <div class="text" style="text-align:center">
             <p class="tlt">Hello, this is my homepage!</p>
+            <p class="tlt">Maybe I will add more stuff in late 2017.</p>
+            <p class="tlt">have fun</p>
+            <p class="tlt italian">toby</p>
             <script>
             $('.tlt').textillate({
             in: { effect:'fadeInLeftBig', delay:14, shuffle: true},
