--- a/present.html
+++ b/present.html
@@ -260,7 +260,7 @@ the printf() call to write to memory and creating a security hole.
 <li><code>mem(\x08\x49\x33\x22) = objdump -t format</code></li>
 <li></li>
 </ul>
-<pre data-role="codeBlock" data-info="" class="language-"><code>./format &quot;`python -c print(&apos;\x08\x49\x33\22&apos; + &apos;%x &apos;\*127)`&quot;
+<pre data-role="codeBlock" data-info="" class="language-"><code>./format &quot;`python -c print(&apos;\x08\x49\x33\22&apos; + &apos;%x &apos;*127)`&quot;
 </code></pre></li>
 </ul>
 
