--- a/ganttChart.html
+++ b/ganttChart.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+  <style type="text/css">
+    text {
+      font-family: sans-serif !important;
+    }
+  </style>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">
     google.charts.load('current', {'packages':['gantt']});
@@ -18,36 +23,33 @@
       data.addColumn('string', 'Dependencies');
 
       data.addRows([
-        ['2014Spring', 'Spring 2014', 'spring',
-         new Date(2014, 2, 22), new Date(2014, 5, 20), null, 100, null],
-        ['2014Summer', 'Summer 2014', 'summer',
-         new Date(2014, 5, 21), new Date(2014, 8, 20), null, 100, null],
-        ['2014Autumn', 'Autumn 2014', 'autumn',
-         new Date(2014, 8, 21), new Date(2014, 11, 20), null, 100, null],
-        ['2014Winter', 'Winter 2014', 'winter',
-         new Date(2014, 11, 21), new Date(2015, 2, 21), null, 100, null],
-        ['2015Spring', 'Spring 2015', 'spring',
-         new Date(2015, 2, 22), new Date(2015, 5, 20), null, 50, null],
-        ['2015Summer', 'Summer 2015', 'summer',
-         new Date(2015, 5, 21), new Date(2015, 8, 20), null, 0, null],
-        ['2015Autumn', 'Autumn 2015', 'autumn',
-         new Date(2015, 8, 21), new Date(2015, 11, 20), null, 0, null],
-        ['2015Winter', 'Winter 2015', 'winter',
-         new Date(2015, 11, 21), new Date(2016, 2, 21), null, 0, null],
-        ['Football', 'Football Season', 'sports',
-         new Date(2014, 8, 4), new Date(2015, 1, 1), null, 100, null],
-        ['Baseball', 'Baseball Season', 'sports',
-         new Date(2015, 2, 31), new Date(2015, 9, 20), null, 14, null],
-        ['Basketball', 'Basketball Season', 'sports',
-         new Date(2014, 9, 28), new Date(2015, 5, 20), null, 86, null],
-        ['Hockey', 'Hockey Season', 'sports',
-         new Date(2014, 9, 8), new Date(2015, 5, 21), null, 89, null]
+        ['task 1', 'Sensor Communication', 'Network',
+         new Date(2018, 8, 10),  new Date(2018, 8, 17), null, 0, null],
+        ['task 2', 'Sensor Body Localization', 'DistanceAlgo',
+         new Date(2018, 8, 15), new Date(2018, 8, 22), null, 0, null],
+        ['task 3', 'Construct the theoretical Movement Measurement Model', 'Math',
+         new Date(2018, 8, 23), new Date(2018, 8, 28), null, 0, null],
+        ['task 4', 'Implement the Measurement Model', 'Core',
+         new Date(2018, 8, 27), new Date(2018, 9, 24), null, 0, null],
+        ['task 5', 'Data Collection and Processing', 'Core',
+         new Date(2018, 9, 7), new Date(2018, 9, 24), null, 0, null],
+        ['task 6', 'Body Modelling in the mobile app', 'Android',
+         new Date(2018, 8, 28), new Date(2018, 9, 5), null, 0, null],
+        ['task 7', 'Reflecting collected data on body model'  , 'Android',
+         new Date(2018, 9, 5), new Date(2018, 9, 14), null, 0, null],
+        ['task 8', 'Generate swimming scenario', 'realLifeApp',
+         new Date(2018, 9, 14), new Date(2018, 9, 24), null, 0, null],
       ]);
 
       var options = {
         height: 400,
         gantt: {
-          trackHeight: 30
+          trackHeight: 30,
+          criticalPathEnabled: false,
+          innerGridHorizLine: {
+            stroke: '#e0f2f2',
+            strokeWidth: 2
+          },
         }
       };
 
@@ -56,8 +58,62 @@
       chart.draw(data, options);
     }
   </script>
+  <script type="text/javascript">
+    google.charts.load('current', {'packages':['gantt']});
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+
+      var data = new google.visualization.DataTable();
+      data.addColumn('string', 'Task ID');
+      data.addColumn('string', 'Task Name');
+      data.addColumn('string', 'Resource');
+      data.addColumn('date', 'Start Date');
+      data.addColumn('date', 'End Date');
+      data.addColumn('number', 'Duration');
+      data.addColumn('number', 'Percent Complete');
+      data.addColumn('string', 'Dependencies');
+
+      data.addRows([
+        ['task 9', 'Benchmarking Test', 'Test',
+         new Date(2018, 9, 25),  new Date(2018, 10, 2), null, 0, null],
+        ['task 10', 'Data Analysis Enhanced' , 'Enhance',
+         new Date(2018, 10, 2), new Date(2018, 10, 9), null, 0, null],
+        ['task 11', 'Data Representation Enhanced' , 'Enhance',
+         new Date(2018, 10, 9), new Date(2018, 10, 17), null, 0, null],
+        ['task 12', 'Body Modelling and Visualization Enhanced', 'Enhance',
+         new Date(2018, 10, 7), new Date(2018, 10, 15), null, 0, null],
+        ['task 13', 'Optimize Power Consumption', 'enhance',
+         new Date(2018, 10, 8), new Date(2018, 10, 16), null, 0, null],
+        ['task 14', 'Mobile App Design (Database, Privacy, UI)', 'Android',
+         new Date(2018, 9, 29), new Date(2018, 10, 17), null, 0, null],
+        ['task 15', 'User Experience Test', 'Test',
+         new Date(2018, 10, 17), new Date(2018, 10, 20), null, 0, null],
+      ]);
+
+      var options = {
+        height: 400,
+        gantt: {
+          trackHeight: 30,
+          criticalPathEnabled: false,
+          innerGridHorizLine: {
+            stroke: '#e0f2f2',
+            strokeWidth: 2
+          },
+        }
+      };
+
+      var chart = new google.visualization.Gantt(document.getElementById('chart_div2'));
+
+      chart.draw(data, options);
+    }
+  </script>
 </head>
 <body>
+  <br>
+  <h3>Before Week 13 Milestone: Minimum Viable Product</h3>
   <div id="chart_div"></div>
+  <h3>From Week 14 to the Demo Date</h3>
+  <div id="chart_div2"></div>
 </body>
 </html>
