update gantt chart

--- a/ganttChart.html
+++ b/ganttChart.html
@@ -27,17 +27,17 @@
          new Date(2018, 8, 10),  new Date(2018, 8, 17), null, 0, null],
         ['task 2', 'Sensor Body Localization', 'DistanceAlgo',
          new Date(2018, 8, 15), new Date(2018, 8, 22), null, 0, null],
-        ['task 3', 'Construct the theoretical Movement Measurement Model', 'Math',
+        ['task 3', 'Design the Movement Measurement Model', 'Math',
          new Date(2018, 8, 23), new Date(2018, 8, 28), null, 0, null],
         ['task 4', 'Implement the Measurement Model', 'Core',
          new Date(2018, 8, 27), new Date(2018, 9, 24), null, 0, null],
         ['task 5', 'Data Collection and Processing', 'Core',
          new Date(2018, 9, 7), new Date(2018, 9, 24), null, 0, null],
-        ['task 6', 'Body Modelling in the mobile app', 'Android',
+        ['task 6', 'Body Modelling In the Mobile App', 'Android',
          new Date(2018, 8, 28), new Date(2018, 9, 5), null, 0, null],
-        ['task 7', 'Reflecting collected data on body model'  , 'Android',
+        ['task 7', 'Reflecting Collected Data On Body Model'  , 'Android',
          new Date(2018, 9, 5), new Date(2018, 9, 14), null, 0, null],
-        ['task 8', 'Generate swimming scenario', 'realLifeApp',
+        ['task 8', 'Generate Swimming Scenario', 'realLifeApp',
          new Date(2018, 9, 14), new Date(2018, 9, 24), null, 0, null],
       ]);
 
