--- a/ganttChart.html
+++ b/ganttChart.html
@@ -85,7 +85,7 @@
          new Date(2018, 10, 7), new Date(2018, 10, 15), null, 0, null],
         ['task 13', 'Optimize Power Consumption', 'enhance',
          new Date(2018, 10, 8), new Date(2018, 10, 16), null, 0, null],
-        ['task 14', 'Mobile App Development (Database, Privacy, UI)', 'Android',
+        ['task 14', 'Mobile App Development', 'Android',
          new Date(2018, 9, 29), new Date(2018, 10, 17), null, 0, null],
         ['task 15', 'User Experience Test', 'Test',
          new Date(2018, 10, 17), new Date(2018, 10, 20), null, 0, null],
