--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
             <a href="https://www.github.com/tobbyzheng">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
+            <a href="https://www.facebook.com/tobias.zheng">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
