--- a/index.html
+++ b/index.html
@@ -95,14 +95,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Developer</h3>
               <div class="subheading mb-3">CSIRO's Data61</div>
-              <p>Software development in Workspace team</p>
-              <p>About Workspace software: https://research.csiro.au/workspace/</p>
-
-Major contribution:
-I set up a prototype of Workspace Cloud Service. Specifically, I wrote native C++ code for building backend Node addons so that Workspace application can be deployed on a web server. Also, an Angular application was set up and sophisticatedly developed for building its frontend.
-
-Side contribution
-I improved Workspace Cloud Editor application which was an online drag-and-drop user interface to create Workspace workflows. This project originally had had a large compatible issue with current versions of Node and Angular. I was able to upgrade all the old dependencies to resolve the issue. </p>
+                <p>About Workspace software: <a>https://research.csiro.au/workspace/</a></p>
+                <p>Major contribution:</p>
+                <p>I set up a prototype of Workspace Cloud Service. Specifically, I wrote native C++ code for building backend Node addons so that Workspace application can be deployed on a web server. Also, an Angular application was set up and sophisticatedly developed for building its frontend.</p>
+                <p>Side contribution</p>
+                <p>I improved Workspace Cloud Editor application which was an online drag-and-drop user interface to create Workspace workflows. This project originally had had a large compatible issue with current versions of Node and Angular. I was able to upgrade all the old dependencies to resolve the issue.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2013 - Present</span>
