--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <p>I improved Workspace Cloud Editor application which was an online drag-and-drop user interface to create Workspace workflows. This project originally had had a large compatible issue with current versions of Node and Angular. I was able to upgrade all the old dependencies to resolve the issue.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">November 2018 - February 2019</span>
             </div>
           </div>
 
