--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Developer</h3>
               <div class="subheading mb-3">CSIRO's Data61</div>
-                <p>About Workspace software: <a>https://research.csiro.au/workspace/</a></p>
+                <a href="https://research.csiro.au/workspace/">About Workspace software</a>
                 <p>Major contribution:</p>
                 <p>I set up a prototype of Workspace Cloud Service. Specifically, I wrote native C++ code for building backend Node addons so that Workspace application can be deployed on a web server. Also, an Angular application was set up and sophisticatedly developed for building its frontend.</p>
                 <p>Side contribution</p>
