--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Clarence Taylor</span>
+        <span class="d-block d-lg-none">Ziming Zheng</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -97,7 +97,7 @@
               <div class="subheading mb-3">CSIRO's Data61</div>
                 <a href="https://research.csiro.au/workspace/">About Workspace software</a>
                 <p><b>Major contribution:</b>
-                I set up a prototype of Workspace Cloud Service. Specifically, I wrote native C++ code for building backend Node addons so that Workspace application can be deployed on a web server. Also, an Angular application was set up and sophisticatedly developed for building its frontend.</p>
+                I set up a prototype of Workspace Cloud Service. Specifically, I wrote native C++ code for building backend Node addons so that Workspace application can be deployed on a web server. Also, an Angular application was set up and sophisticatedly developed for building a frontend.</p>
                 <p><b>Side contribution:</b>
                 I improved Workspace Cloud Editor application which was an online drag-and-drop user interface to create Workspace workflows. This project originally had had a large compatible issue with current versions of Node and Angular. I was able to upgrade all the old dependencies to resolve the issue.</p>
             </div>
@@ -108,27 +108,28 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Lab Assistant & Invigilator</h3>
+              <div class="subheading mb-3">UNSW Sydney</div>
+              <p>As a lab assistant of an object-oriented programming course, I answered students’ questions, marked student assignments and labs. I also helped lecturer make JavaFX tutorials.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">July 2018 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Gaming Software Developer</h3>
+              <div class="subheading mb-3">Lionsheart Studios</div>
+              <p>Using Unity and C# to design and build game. Conducting comprehensive testing on Playconomics, an online educational gaming platform used by UNSW Business School.
+</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">September 2017 - October 2017</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <!-- <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Design Intern</h3>
               <div class="subheading mb-3">Shout! Media Productions</div>
@@ -137,7 +138,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2008 - June 2010</span>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -151,26 +152,26 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
+              <h3 class="mb-0">UNSW Sydney</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <div>Computer Science</div>
+              <p>Distinction Average</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">February 2016 - December 2019</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <!-- <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">James Buchanan High School</h3>
               <div class="subheading mb-3">Technology Magnet Program</div>
               <p>GPA: 3.56</p>
-            </div>
-            <div class="resume-date text-md-right">
+            </div> -->
+            <!-- <div class="resume-date text-md-right">
               <span class="text-primary">August 2002 - May 2006</span>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </section>
@@ -183,21 +184,21 @@
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <i class="fab fa-html5"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+            <!-- <li class="list-inline-item">
               <i class="fab fa-css3-alt"></i>
-            </li>
+            </li> -->
             <li class="list-inline-item">
               <i class="fab fa-js-square"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-angular"></i>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <i class="fab fa-react"></i>
-            </li>
+            </li> -->
             <li class="list-inline-item">
               <i class="fab fa-node-js"></i>
             </li>
@@ -207,15 +208,15 @@
             <li class="list-inline-item">
               <i class="fab fa-less"></i>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+            <!-- <li class="list-inline-item">
               <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+            <!-- <li class="list-inline-item">
               <i class="fab fa-grunt"></i>
-            </li>
+            </li> -->
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
             </li>
