--- a/index.html
+++ b/index.html
@@ -202,12 +202,15 @@
             <li class="list-inline-item">
               <i class="fab fa-node-js"></i>
             </li>
-            <li class="list-inline-item">
+            <li class=""list-inline-item">
+                <i class="fab fa-python"></i>
+            </li>
+            <!-- <li class="list-inline-item">
               <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
+            </li> -->
+            <!-- <li class="list-inline-item">
               <i class="fab fa-less"></i>
-            </li>
+            </li> -->
             <!-- <li class="list-inline-item">
               <i class="fab fa-wordpress"></i>
             </li> -->
