--- a/index.html
+++ b/index.html
@@ -202,8 +202,20 @@
             <li class="list-inline-item">
               <i class="fab fa-node-js"></i>
             </li>
-            <li class=""list-inline-item">
+            <li class="list-inline-item">
                 <i class="fab fa-python"></i>
+            </li>
+            <li class="list-inline-item">
+                <i class="fa fa-git"></i>
+            </li>
+            <li class="list-inline-item">
+                <i class="fa fa-linux"></i>
+            </li>
+            <li class="list-inline-item">
+                <i>C/C++</i>
+            </li>
+            <li class="list-inline-item">
+                <i>Java</i>
             </li>
             <!-- <li class="list-inline-item">
               <i class="fab fa-sass"></i>
