--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
                 <i class="fab fa-python"></i>
             </li>
             <li class="list-inline-item">
-                <i class="fa fa-git"></i>
+                <i class="fab fa-git"></i>
             </li>
             <li class="list-inline-item">
-                <i class="fa fa-linux"></i>
+                <i class="fab fa-linux"></i>
             </li>
             <li class="list-inline-item">
                 <i>C/C++</i>
