--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
             <li class="list-inline-item">
                 <i>Java</i>
             </li>
+            <li class="list-inline-item">
+              <i class="fab fa-npm"></i>
+            </li>
             <!-- <li class="list-inline-item">
               <i class="fab fa-sass"></i>
             </li> -->
@@ -232,25 +235,22 @@
             <!-- <li class="list-inline-item">
               <i class="fab fa-grunt"></i>
             </li> -->
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
-            </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Others</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Object-oriented Programming</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Test-driven development</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Cross Functional Teams</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Agile Development</li>
           </ul>
         </div>
       </section>
@@ -260,8 +260,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier. During the warmer months here in Sydney, I enjoy bushwalking, swimming, and playing football.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the cybersecurity.</p>
         </div>
       </section>
 
@@ -269,15 +269,15 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Awards</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              Dean’s Honours List 2017</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
+              1st place in the course of IoT Design Studio</li>
+            <!-- <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
               Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
@@ -296,7 +296,7 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Place - James Buchanan High School - Hackathon 2005</li> -->
           </ul>
         </div>
       </section>
